@@ -23,6 +23,8 @@ local MOD = {
 	Lang = {},
 	ID = "Norm_Dominax",
 	Object = "MOD",
+	Timeout = 25,
+	TimeoutOverride = true,
 }
 
 MOD.Dominax = {
@@ -34,8 +36,8 @@ MOD.Dominax = {
 	Menu = {},
 	Castbar = nil,
 	Dead = false,
-	-- TimersRef = {},
-	-- AlertsRef = {},
+	TimersRef = {},
+	AlertsRef = {},
 	Available = false,
 	UnitID = nil,
 	UTID = {
@@ -46,14 +48,16 @@ MOD.Dominax = {
 	Triggers = {},
 	Settings = {
 		CastBar = KBM.Defaults.CastBar(),
-		-- TimersRef = {
-			-- Enabled = true,
-			-- Funnel = KBM.Defaults.TimerObj.Create("red"),
-		-- },
-		-- AlertsRef = {
-			-- Enabled = true,
-			-- Funnel = KBM.Defaults.AlertObj.Create("red"),
-		-- },
+		TimersRef = {
+			Enabled = true,
+			Decimate = KBM.Defaults.TimerObj.Create("yellow"),
+		},
+		AlertsRef = {
+			Enabled = true,
+			Decimate = KBM.Defaults.AlertObj.Create("yellow"),
+			MistWarn = KBM.Defaults.AlertObj.Create("orange"),
+			Mist = KBM.Defaults.AlertObj.Create("red"),
+		},
 	}
 }
 
@@ -73,6 +77,20 @@ MOD.Dominax.NameShort = MOD.Lang.Unit.AndShort[KBM.Lang]
 
 -- Ability Dictionary
 MOD.Lang.Ability = {}
+MOD.Lang.Ability.Decimate = KBM.Language:Add("Decimator")
+MOD.Lang.Ability.Decimate:SetGerman("Dezimierer")
+MOD.Lang.Ability.Mist = KBM.Language:Add("Red Mist")
+MOD.Lang.Ability.Mist:SetGerman("Roter Nebel")
+
+-- Verbose Dictionary
+MOD.Lang.Verbose = {}
+MOD.Lang.Verbose.Mist = KBM.Language:Add("Preparing Red Mist")
+MOD.Lang.Verbose.Mist:SetGerman("Verstecken!")
+
+-- Notify Dictionary
+MOD.Lang.Notify = {}
+MOD.Lang.Notify.Victory = KBM.Language:Add('Icewatch Protector pleas, "Quickly, Ascended! We need you downstairs!"')
+MOD.Lang.Notify.Victory:SetGerman('Der Eiswacht-Beschützer bittet: "Beeilt Euch, Auserwählte! Wir brauchen Euch hier unten!"') 
 
 function MOD:AddBosses(KBM_Boss)
 	self.MenuName = self.Descript
@@ -87,10 +105,10 @@ function MOD:InitVars()
 		CastBar = self.Dominax.Settings.CastBar,
 		EncTimer = KBM.Defaults.EncTimer(),
 		PhaseMon = KBM.Defaults.PhaseMon(),
-		-- MechTimer = KBM.Defaults.MechTimer(),
-		-- Alerts = KBM.Defaults.Alerts(),
-		-- TimersRef = self.Dominax.Settings.TimersRef,
-		-- AlertsRef = self.Dominax.Settings.AlertsRef,
+		MechTimer = KBM.Defaults.MechTimer(),
+		Alerts = KBM.Defaults.Alerts(),
+		TimersRef = self.Dominax.Settings.TimersRef,
+		AlertsRef = self.Dominax.Settings.AlertsRef,
 	}
 	KBMSLNMSQDX_Settings = self.Settings
 	chKBMSLNMSQDX_Settings = self.Settings
@@ -178,7 +196,7 @@ function MOD:UnitHPCheck(uDetails, unitID)
 				self.TimeElapsed = 0
 				BossObj.Dead = false
 				BossObj.Casting = false
-				self.Timeout = 25
+				self.Timeout = 3
 				if self.Dominax.UTID[1] == uDetails.type then
 					self.PhaseObj:Start(self.StartTime)
 					self.PhaseObj:SetPhase("1")
@@ -189,7 +207,7 @@ function MOD:UnitHPCheck(uDetails, unitID)
 			if BossObj.Type == self.Dominax.UTID[2] then
 				if self.Phase == 1 then
 					self.PhaseFinal()
-					self.Timeout = 0
+					self.Timeout = 25
 				end
 			end
 			BossObj.Available = true
@@ -216,12 +234,27 @@ end
 
 function MOD:Start()
 	-- Create Timers
-	--KBM.Defaults.TimerObj.Assign(self.Dominax)
+	self.Dominax.TimersRef.Decimate = KBM.MechTimer:Add(self.Lang.Ability.Decimate[KBM.Lang], 30)
+	KBM.Defaults.TimerObj.Assign(self.Dominax)
 	
 	-- Create Alerts
-	--KBM.Defaults.AlertObj.Assign(self.Dominax)
+	self.Dominax.AlertsRef.Decimate = KBM.Alert:Create(self.Lang.Ability.Decimate[KBM.Lang], nil, false, true, "yellow")
+	self.Dominax.AlertsRef.MistWarn = KBM.Alert:Create(self.Lang.Verbose.Mist[KBM.Lang], nil, false, true, "orange")
+	self.Dominax.AlertsRef.Mist = KBM.Alert:Create(self.Lang.Ability.Mist[KBM.Lang], nil, true, true, "red")
+	KBM.Defaults.AlertObj.Assign(self.Dominax)
 	
 	-- Assign Alerts and Timers to Triggers
+	self.Dominax.Triggers.Decimate = KBM.Trigger:Create(self.Lang.Ability.Decimate[KBM.Lang], "cast", self.Dominax)
+	self.Dominax.Triggers.Decimate:AddAlert(self.Dominax.AlertsRef.Decimate)
+	self.Dominax.Triggers.Decimate:AddTimer(self.Dominax.TimersRef.Decimate)
+	self.Dominax.Triggers.DecimateInt = KBM.Trigger:Create(self.Lang.Ability.Decimate[KBM.Lang], "interrupt", self.Dominax)
+	self.Dominax.Triggers.DecimateInt:AddStop(self.Dominax.AlertsRef.Decimate)
+	self.Dominax.Triggers.MistWarn = KBM.Trigger:Create(self.Lang.Ability.Mist[KBM.Lang], "cast", self.Dominax)
+	self.Dominax.Triggers.MistWarn:AddAlert(self.Dominax.AlertsRef.MistWarn)
+	self.Dominax.Triggers.Mist = KBM.Trigger:Create(self.Lang.Ability.Mist[KBM.Lang], "channel", self.Dominax)
+	self.Dominax.Triggers.Mist:AddAlert(self.Dominax.AlertsRef.Mist)
+	self.Dominax.Triggers.Victory = KBM.Trigger:Create(self.Lang.Notify.Victory[KBM.Lang], "notify", self.Dominax)
+	self.Dominax.Triggers.Victory:SetVictory()
 	
 	self.Dominax.CastBar = KBM.CastBar:Add(self, self.Dominax)
 	self.PhaseObj = KBM.PhaseMonitor.Phase:Create(1)
